// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderInput should not render a loading spinner when loading prop is false 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="container loader-input loaderInput"
    >
      <input
        class="form-control with-invalid-icon"
        type="text"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoaderInput should render a loading spinner when loading prop is true 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="container loader-input loaderInput"
    >
      <input
        class="form-control with-invalid-icon"
        type="text"
      />
    </div>
    <div
      aria-label="Loading"
      aria-live="polite"
      class="mdi-icon loadingSpinner spinner"
      data-loading-spinner="true"
      role="img"
    />
  </div>
</DocumentFragment>
`;
